--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.3.0",
     "css-loader": "^7.1.2",
     "jest": "^29.7.0",
+    "rc-simple-hook-form": "^1.0.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "rollup": "^4.18.1",
